--- a/front_end/add_activity.html
+++ b/front_end/add_activity.html
@@ -1,29 +1,137 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Add Activity</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>FitTrack - Log Workout</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/styles.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+    <style>
+        body {
+            background: #f8f9fa;
+            font-family: 'Arial', sans-serif;
+        }
+        .header {
+            background: white;
+            padding: 20px;
+            text-align: center;
+            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+        }
+        .logo {
+            font-size: 32px;
+            font-weight: bold;
+            color: #007bff;
+        }
+        .logo span {
+            color: #28a745;
+        }
+        .form-container {
+            margin: 20px;
+        }
+        .btn-log {
+            background: #ff8c00;
+            border: none;
+            border-radius: 50px;
+            font-weight: bold;
+        }
+        .bottom-nav {
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+            background: white;
+            box-shadow: 0 -2px 10px rgba(0,0,0,0.1);
+            padding: 10px 0;
+        }
+        .bottom-nav a {
+            color: #6c757d;
+            text-decoration: none;
+            font-size: 12px;
+        }
+        .bottom-nav a.active {
+            color: #007bff;
+        }
+        .bottom-nav i {
+            font-size: 24px;
+        }
+    </style>
 </head>
-
 <body>
-    <div class="container mt-4">
-        <h2>Add Activity</h2>
 
-        <div class="mb-3">
-            <label>Activity Name</label>
-            <input type="text" id="name" class="form-control">
+    <!-- Header -->
+    <div class="header">
+        <div class="logo">Fit<span>✔</span>Track</div>
+        <h4>Log Workout</h4>
+    </div>
+
+    <!-- Form -->
+    <div class="form-container">
+        <form id="workoutForm">
+            <div class="mb-3">
+                <label class="form-label">Date</label>
+                <input type="date" id="date" class="form-control" required>
+            </div>
+            <div class="mb-3">
+                <label class="form-label">Type of Exercise</label>
+                <select id="type" class="form-select" required>
+                    <option>Running</option>
+                    <option>Cycling</option>
+                    <option>Swimming</option>
+                    <option>Gym</option>
+                    <option>Walking</option>
+                    <option>Other</option>
+                </select>
+            </div>
+            <div class="row mb-3">
+                <div class="col">
+                    <label class="form-label">Duration</label>
+                    <input type="number" id="duration" class="form-control" placeholder="30 min" required>
+                </div>
+                <div class="col">
+                    <label class="form-label">Distance</label>
+                    <input type="number" step="0.1" id="distance" class="form-control" placeholder="5.0 km">
+                </div>
+            </div>
+            <div class="mb-3">
+                <label class="form-label">Notes</label>
+                <textarea id="notes" class="form-control" placeholder="Optional"></textarea>
+            </div>
+            <button type="submit" class="btn btn-log w-100">Log Workout</button>
+        </form>
+    </div>
+
+    <!-- Bottom Nav -->
+    <div class="bottom-nav text-center">
+        <div class="row">
+            <div class="col"><a href="index.html"><i class="fas fa-home"></i><br>Home</a></div>
+            <div class="col"><a href="progress.html"><i class="fas fa-chart-line"></i><br>Progress</a></div>
+            <div class="col"><a href="dashboard.html" class="active"><i class="fas fa-dumbbell"></i><br>Workouts</a></div>
+            <div class="col"><a href="profile.html"><i class="fas fa-user"></i><br>Profile</a></div>
         </div>
-
-        <div class="mb-3">
-            <label>Duration (mins)</label>
-            <input type="number" id="duration" class="form-control">
-        </div>
-
-        <button class="btn btn-success" onclick="addActivity()">Save</button>
     </div>
 
     <script src="assets/js/api.js"></script>
-    <script src="assets/js/add_activity.js"></script>
+    <script>
+        document.getElementById('date').valueAsDate = new Date();
+
+        document.getElementById('workoutForm').addEventListener('submit', async (e) => {
+            e.preventDefault();
+            const workout = {
+                date: document.getElementById('date').value,
+                type: document.getElementById('type').value,
+                duration_minutes: parseInt(document.getElementById('duration').value),
+                distance_km: parseFloat(document.getElementById('distance').value) || null,
+                notes: document.getElementById('notes').value || ''
+            };
+
+            try {
+                await apiPost('/api/activities/', workout);
+                alert('Workout logged!');
+                window.location.href = 'dashboard.html';
+            } catch (err) {
+                alert('Error logging workout');
+            }
+        });
+    </script>
 </body>
 </html>
