--- a/front_end/dashboard.html
+++ b/front_end/dashboard.html
@@ -3,19 +3,145 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dashboard | FitTrack</title>
+    <title>FitTrack - Dashboard</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/styles.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <style>
+        body {
+            background: #f8f9fa;
+        }
+        .header {
+            background: white;
+            padding: 20px;
+            text-align: center;
+            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+        }
+        .logo {
+            font-size: 32px;
+            font-weight: bold;
+            color: #007bff;
+        }
+        .logo span {
+            color: #28a745;
+        }
+        .stat-card {
+            margin: 20px;
+            background: white;
+            border-radius: 16px;
+            box-shadow: 0 4px 20px rgba(0,0,0,0.1);
+            padding: 20px;
+            text-align: center;
+        }
+        .total-exercise {
+            font-size: 48px;
+            color: #007bff;
+        }
+        .goal-bar {
+            background: #e2f1ff;
+            border-radius: 12px;
+            height: 20px;
+            position: relative;
+        }
+        .goal-progress {
+            background: #ff8c00;
+            height: 100%;
+            border-radius: 12px;
+        }
+        .bottom-nav {
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+            background: white;
+            box-shadow: 0 -2px 10px rgba(0,0,0,0.1);
+            padding: 10px 0;
+        }
+        .bottom-nav a {
+            color: #6c757d;
+            text-decoration: none;
+            font-size: 12px;
+        }
+        .bottom-nav a.active {
+            color: #007bff;
+        }
+        .bottom-nav i {
+            font-size: 24px;
+        }
+    </style>
 </head>
-
 <body>
-    <div class="container mt-4">
-        <h2>Dashboard</h2>
-        <canvas id="activitiesChart" height="150"></canvas>
+
+    <!-- Header -->
+    <div class="header">
+        <div class="logo">Fit<span>✔</span>Track</div>
+        <h4>Dashboard</h4>
+    </div>
+
+    <!-- Stats Cards -->
+    <div class="stat-card">
+        <h5>Total Exercise</h5>
+        <div class="total-exercise" id="totalDistance">0</div>
+        <span class="text-success">↑ 10%</span>
+    </div>
+
+    <div class="stat-card">
+        <h5>Progress</h5>
+        <canvas id="progressPie" height="200"></canvas>
+    </div>
+
+    <div class="stat-card">
+        <h5>Goal</h5>
+        <div class="goal-bar">
+            <div class="goal-progress" style="width: 65%;"></div>
+        </div>
+        <p id="goalText">0 km / 8 km</p>
+    </div>
+
+    <!-- Bottom Nav -->
+    <div class="bottom-nav text-center">
+        <div class="row">
+            <div class="col"><a href="index.html" class="active"><i class="fas fa-home"></i><br>Home</a></div>
+            <div class="col"><a href="progress.html"><i class="fas fa-chart-line"></i><br>Progress</a></div>
+            <div class="col"><a href="add_activity.html"><i class="fas fa-dumbbell"></i><br>Workouts</a></div>
+            <div class="col"><a href="profile.html"><i class="fas fa-user"></i><br>Profile</a></div>
+        </div>
     </div>
 
     <script src="assets/js/api.js"></script>
-    <script src="assets/js/dashboard.js"></script>
+    <script>
+        async function loadDashboard() {
+            const activities = await apiGet('/api/activities/');
+            let totalDistance = 0;
+            let goal = 8;  // Hardcoded goal - make dynamic later
+            let progress = 0;
+            activities.forEach(act => {
+                totalDistance += act.distance_km || 0;
+            });
+            progress = (totalDistance / goal * 100).toFixed(0);
+            document.getElementById('totalDistance').textContent = totalDistance.toLocaleString();
+            document.getElementById('goalText').textContent = `${totalDistance} km / ${goal} km`;
+            document.querySelector('.goal-progress').style.width = `${progress}%`;
+
+            // Pie Chart (example segments - calculate from activities)
+            new Chart(document.getElementById('progressPie'), {
+                type: 'doughnut',
+                data: {
+                    labels: ['Running', 'Cycling', 'Other'],
+                    datasets: [{
+                        data: [40, 35, 25],  // Replace with real percentages from activities
+                        backgroundColor: ['#ff8c00', '#007bff', '#28a745']
+                    }]
+                },
+                options: {
+                    responsive: true,
+                    plugins: {
+                        legend: { position: 'bottom' }
+                    }
+                }
+            });
+        }
+        loadDashboard();
+    </script>
 </body>
 </html>
