connect sign up link

--- a/front_end/index.html
+++ b/front_end/index.html
@@ -95,7 +95,7 @@
         </form>
 
         <div class="text-center mt-4">
-            <small>Don't have an account? <a href="#">Sign up</a></small>
+            <small>Don't have an account? <a href="sign_up.html">Sign up</a></small>
         </div>
     </div>
 </div>
