--- a/front_end/index.html
+++ b/front_end/index.html
@@ -81,18 +81,25 @@
     <div class="form-section">
         <h3 class="text-center mb-4">Login</h3>
 
-        <form onsubmit="return false;">
-            <div class="mb-3">
-                <input id="username" class="form-control form-control-lg" placeholder="Username" required>
-            </div>
-            <div class="mb-3">
-                <input id="password" type="password" class="form-control form-control-lg" placeholder="Password" required>
-            </div>
+        <form onsubmit="loginUser(event)">
+    <div class="mb-3">
+        <input id="username" class="form-control form-control-lg"
+               placeholder="Username" required>
+    </div>
 
-            <button onclick="login()" class="btn btn-primary btn-login w-100">Login</button>
+    <div class="mb-3">
+        <input id="password" type="password"
+               class="form-control form-control-lg"
+               placeholder="Password" required>
+    </div>
 
-            <p id="error" class="text-danger text-center mt-3 mb-0"></p>
-        </form>
+    <button type="submit" class="btn btn-primary btn-login w-100">
+        Login
+    </button>
+
+    <p id="error" class="text-danger text-center mt-3 mb-0"></p>
+</form>
+
 
         <div class="text-center mt-4">
             <small>Don't have an account? <a href="sign_up.html">Sign up</a></small>
