--- a/front_end/index.html
+++ b/front_end/index.html
@@ -110,7 +110,48 @@
 <!-- Your existing auth.js for real login logic -->
 <script src="assets/js/auth.js"></script>
 <script src="assets/js/api.js"></script>
+<script>
+// Fallback login function if auth.js doesn't load
+async function loginUser(event) {
+    event.preventDefault();
 
+    const username = document.getElementById('username').value.trim();
+    const password = document.getElementById('password').value;
+    const errorEl = document.getElementById('error');
+
+    if (!username || !password) {
+        errorEl.textContent = 'Please enter both username and password';
+        return;
+    }
+
+    errorEl.textContent = '';  // Clear old errors
+
+    try {
+        const response = await fetch('https://fittrack-api-7b9k.onrender.com/api/token/', {
+            method: 'POST',
+            headers: { 'Content-Type': 'application/json' },
+            body: JSON.stringify({ username, password })
+        });
+
+        if (!response.ok) {
+            if (response.status === 401) {
+                throw new Error('Invalid username or password');
+            }
+            throw new Error(`Login failed (${response.status})`);
+        }
+
+        const data = await response.json();
+        localStorage.setItem('access_token', data.access);
+        localStorage.setItem('refresh_token', data.refresh || '');
+
+        // Redirect to your dashboard page
+        window.location.href = 'dashboard.html';  // Or whatever your main page is
+    } catch (err) {
+        console.error(err);
+        errorEl.textContent = err.message || 'Login failed – check connection or credentials';
+    }
+}
+</script>
 
 
 </body>
